# corto

./: .gitignore  CMakeLists.txt  codesign.py  inject_xcprivacy.sh
include/corto/: corto_decoder_c.h  decoder.h
src/: corto_codec.h  corto_decoder_c.cpp
